refactor html: update doctype to html5, improve indentation, and enhance accessibility with loading attributes on images

--- a/index.html
+++ b/index.html
@@ -1,144 +1,217 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Photon by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Piene Claessen Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <head>
+    <title>Piene Claessen Portfolio</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body class="is-preload">
+    <!-- Header -->
+    <section id="header">
+      <div class="inner">
+        <span class="icon solid major fa-handshake"></span>
+        <h1>Hi, I'm <strong>Piene Claessen</strong></h1>
+        <p>Freelance data analyst and data scientist</p>
+        <ul class="actions special">
+          <li><a href="#one" class="button scrolly">Discover more</a></li>
+        </ul>
+      </div>
+    </section>
 
-	</head>
-	<body class="is-preload">
+    <!-- One -->
+    <section id="one" class="main style1">
+      <div class="container">
+        <div class="row gtr-150">
+          <div class="col-6 col-12-medium">
+            <header class="major">
+              <h2>About me</h2>
+            </header>
+            <p>
+              I am a data analyst and data scientist with a strong track record
+              of developing data products that deliver business value. Skilled
+              at bridging business and technology by identifying needs,
+              translating them into practical solutions, and building them
+              end-to-end. I have a proven ability to communicate technical
+              concepts clearly to stakeholders, demonstrating the value of
+              data-driven approaches. My expertise is in dashboards, workflow
+              automation, and applied machine learning.
+            </p>
+          </div>
+          <div class="col-6 col-12-medium imp-medium">
+            <span
+              class="image fit"
+              style="max-width: 300px; display: block; margin: 0 auto"
+            >
+              <img
+                src="images/profile_picture.png"
+                alt=""
+                style="width: 100%; height: auto"
+              />
+            </span>
+          </div>
+        </div>
+      </div>
+    </section>
 
-		<!-- Header -->
-			<section id="header">
-				<div class="inner">
-					<span class="icon solid major fa-handshake"></span>
-					<h1>Hi, I'm <strong>Piene Claessen</strong></a></h1>
-					<p>Freelance data analyst and data scientist</p>
-					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover more</a></li>
-					</ul>
-				</div>
-			</section>
+    <!-- Two -->
+    <section id="two" class="main style2">
+      <div class="container small-container">
+        <header class="major">
+          <h2>Technical skills</h2>
+        </header>
+        <ul class="major-icons">
+          <li>
+            <span class="icon solid style1 major fa-chart-line"></span>
+            <h3>Data Visualization</h3>
+            <p>
+              Cleaning and transforming data into clear, interactive dashboards
+              using Microsoft Power BI
+            </p>
+          </li>
+          <li>
+            <span class="icon style1 major fab fa-python"></span>
+            <h3>Python</h3>
+            <p>
+              Performing data cleaning, analysis, and visualization using Python
+              libraries such as NumPy, Pandas, Scikit-learn, Matplotlib, and
+              Seaborn
+            </p>
+          </li>
+          <li>
+            <span class="icon solid style1 major fa-database"></span>
+            <h3>SQL</h3>
+            <p>
+              Storing, querying, and processing structured data efficiently for
+              analysis and reporting
+            </p>
+          </li>
+          <li>
+            <span class="icon solid style1 major fa-brain"></span>
+            <h3>Machine Learning</h3>
+            <p>
+              Designing machine learning algorithms for predictive modeling,
+              pattern recognition, and data-driven insights
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
 
-		<!-- One -->
-			<section id="one" class="main style1">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>About me</h2>
-							</header>
-							<p>I am a data analyst and data scientist with a strong track record of developing data products that deliver business value. Skilled at bridging business and technology by identifying needs, translating them into practical solutions, and building them end-to-end. I have a proven ability to communicate technical concepts clearly to stakeholders, demonstrating the value of data-driven approaches. My expertise is in dashboards, workflow automation, and applied machine learning.</p>
-						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit" style="max-width: 300px; display: block; margin: 0 auto;">
-  								<img src="images/profile_picture.png" alt="" style="width: 100%; height: auto;" />
-							</span>
-						</div>
-					</div>
-				</div>
-			</section>
+    <!-- Three -->
+    <section id="three" class="main style1 special">
+      <div class="container">
+        <header class="major">
+          <h2>My Portfolio</h2>
+        </header>
+        <p>Have a look at recent projects that I have completed</p>
+        <div class="row gtr-150">
+          <div class="col-4 col-12-medium">
+            <span class="image fit"
+              ><img
+                src="images/hospital_image.jpg"
+                loading="lazy"
+                alt="hospital data analysis"
+            /></span>
+            <h3>Hospital data analysis</h3>
+            <p>Data analysis with Python</p>
+            <ul class="actions special">
+              <li><a href="projects/hospital.html" class="button">More</a></li>
+            </ul>
+          </div>
+          <div class="col-4 col-12-medium">
+            <span class="image fit"
+              ><img
+                src="images/peoplepulse_dashboard.jpeg"
+                alt="dashboard"
+                loading="lazy"
+            /></span>
+            <h3>HR Attrition dashboard</h3>
+            <p>
+              Interactive HR dashboard giving insights in the attrition rate of
+              PeoplePulse
+            </p>
+            <ul class="actions special">
+              <li>
+                <a href="projects/peoplepulse.html" class="button">More</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-4 col-12-medium">
+            <span class="image fit"
+              ><img
+                src="images/ktm_dashboard.png"
+                alt="motorbike"
+                loading="lazy"
+            /></span>
+            <h3>KTM Product Catalogue</h3>
+            <p>
+              Product catalogue made with Microsoft PowerBI to give customers a
+              clear overview of the available models
+            </p>
+            <ul class="actions special">
+              <li><a href="projects/ktm.html" class="button">More</a></li>
+            </ul>
+          </div>
+          <div class="col-4 col-12-medium">
+            <span class="image fit"
+              ><img
+                src="images/stridebikes_dashboard.jpg"
+                alt="bikes"
+                loading="lazy"
+            /></span>
+            <h3>Stride Bikes sales dashboard</h3>
+            <p>
+              Interactive sales dashboard for Stride Bikes to give insights in
+              their sales performance
+            </p>
+            <ul class="actions special">
+              <li><a href="projects/stride.html" class="button">More</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
-	<!-- Two -->
-		<section id="two" class="main style2">
-			<div class="container small-container">
-				<header class="major">
-					<h2>Technical skills</h2>
-				</header>
-				<ul class="major-icons">
-					<li>
-						<span class="icon solid style1 major fa-chart-line"></span>
-						<h3>Data Visualization</h3>
-						<p>Cleaning and transforming data into clear, interactive dashboards using Microsoft Power BI</p>
-					</li>
-					<li>
-						<span class="icon style1 major fab fa-python"></span>
-						<h3>Python</h3>
-						<p>Performing data cleaning, analysis, and visualization using Python libraries such as NumPy, Pandas, Scikit-learn, Matplotlib, and Seaborn</p>
-					</li>
-					<li>
-						<span class="icon solid style1 major fa-database"></span>
-						<h3>SQL</h3>
-						<p>Storing, querying, and processing structured data efficiently for analysis and reporting</p>
-					</li>
-					<li>
-						<span class="icon solid style1 major fa-brain"></span>
-						<h3>Machine Learning</h3>
-						<p>Designing machine learning algorithms for predictive modeling, pattern recognition, and data-driven insights</p>
-					</li>
-				</ul>
-			</div>
-		</section>
+    <!-- Four -->
+    <section id="four" class="main style2 special">
+      <div class="container">
+        <header class="major">
+          <h2>Want to know more?</h2>
+        </header>
+        <p>Let's get in touch to see what I can do for you!</p>
+        <ul class="actions special">
+          <li>
+            <a href="mailto:claessenpiene@gmail.com" class="button wide primary"
+              >Email me</a
+            >
+          </li>
+          <li>
+            <a href="images/CV.pdf" target="_blank" class="button wide"
+              >Download my resume</a
+            >
+          </li>
+        </ul>
+      </div>
+    </section>
 
-		<!-- Three -->
-		<section id="three" class="main style1 special">
-			<div class="container">
-				<header class="major">
-					<h2>My Portfolio</h2>
-				</header>
-				<p>Have a look at recent projects that I have completed</p>
-				<div class="row gtr-150">
-					<div class="col-4 col-12-medium">
-						<span class="image fit"><img src="images/hospital_image.jpg" alt="" /></span>
-						<h3>Hospital data analysis</h3>
-						<p>Data analysis with Python</p>
-						<ul class="actions special">
-							<li><a href="projects/hospital.html" class="button">More</a></li>
-						</ul>	
-					</div>	
-					<div class="col-4 col-12-medium">
-						<span class="image fit"><img src="images/peoplepulse_dashboard.jpeg" alt="" /></span>
-						<h3>HR Attrition dashboard</h3>
-						<p>Interactive HR dashboard giving insights in the attrition rate of PeoplePulse</p>
-						<ul class="actions special">
-							<li><a href="projects/peoplepulse.html" class="button">More</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-12-medium">
-						<span class="image fit"><img src="images/ktm_dashboard.png" alt="" /></span>
-						<h3>KTM Product Catalogue</h3>
-						<p>Product catalogue made with Microsoft PowerBI to give customers a clear overview of the available models</p>
-						<ul class="actions special">
-							<li><a href="projects/ktm.html" class="button">More</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-12-medium">
-						<span class="image fit"><img src="images/stridebikes_dashboard.jpg" alt="" /></span>
-						<h3>Stride Bikes sales dashboard</h3>
-						<p>Interactive sales dashboard for Stride Bikes to give insights in their sales performance</p>
-						<ul class="actions special">
-							<li><a href="projects/stride.html" class="button">More</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- Four -->
-			<section id="four" class="main style2 special">
-				<div class="container">
-					<header class="major">
-						<h2>Want to know more?</h2>
-					</header>
-					<p>Let's get in touch to see what I can do for you!</p>
-					<ul class="actions special">
-						<li><a href="mailto:claessenpiene@gmail.com" class="button wide primary">Email me</a></li>
-						<li><a href="images/CV.pdf" target="_blank" class="button wide">Download my resume</a></li>
-
-					</ul>
-				</div>
-			</section>
-
-		<!-- Five -->
-		<!--
+    <!-- Five -->
+    <!--
 			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
@@ -455,25 +528,44 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		 -->
 
-		<!-- Footer -->
-			<section id="footer">
-				<ul class="icons">
-					<li><a href="mailto:claessenpiene@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					<li><a href="https://www.linkedin.com/in/piene-claessen/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/pieneclaessen" target = "_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; 2025 Piene Claessen. All rights reserved.</li>
-				</ul>
-			</section>
+    <!-- Footer -->
+    <section id="footer">
+      <ul class="icons">
+        <li>
+          <a
+            href="mailto:claessenpiene@gmail.com"
+            class="icon solid alt fa-envelope"
+            ><span class="label">Email</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/piene-claessen/"
+            target="_blank"
+            class="icon brands fa-linkedin"
+            ><span class="label">LinkedIn</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://github.com/pieneclaessen"
+            target="_blank"
+            class="icon brands alt fa-github"
+            ><span class="label">GitHub</span></a
+          >
+        </li>
+      </ul>
+      <ul class="copyright">
+        <li>&copy; 2025 Piene Claessen. All rights reserved.</li>
+      </ul>
+    </section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
